--- a/events.html
+++ b/events.html
@@ -61,12 +61,12 @@
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="ahlarry.html">Alh ar'ray</a></li>
-                                        <li><a href="vyakti.html">Vyaktitvam</a></li>
-                                        <li><a href="accentus.html">Accentus</a></li>
-                                        <li><a href="segacite.html">Segacite</a></li>
-                                        <li><a href="cribado.html">Cribado</a></li>
-										<li><a href="msmr.html">Ms/Mr KnowHow</a></li>
+                                        <li><a href="events/ahlarry.html">Ahl ar'ray</a></li>
+                                        <li><a href="events/vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="events/accentus.html">Accentus</a></li>
+                                        <li><a href="events/segacite.html">Segacite</a></li>
+                                        <li><a href="events/cribado.html">Cribado</a></li>
+                                        <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="Results.html">Results</a></li>
@@ -75,9 +75,9 @@
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
-                                        <li><a href="evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="dev.html">Developers</a></li>
-                                        <li><a href="contact.html">Send Query</a></li>
+                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
+                                        <li><a href="contact/dev.html">Developers</a></li>
+                                        <li><a href="contact/contact.html">Send Query</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -105,19 +105,27 @@
                     <div class="tile">
                         <div class="tile is-parent is-vertical">
                             <article class="tile is-child notification is-primary">
-                                <a href="segacite.html" style="color:black"><p class="text-black h2 mb-0" >Segacite</p></a>
+                                <a href="events/segacite.html" style="color:black">
+                                    <p class="text-black h2 mb-0">Segacite</p>
+                                </a>
                                 <p class="subtitle" style="color:black"><b>“Because the cover of the book matters!”</b></p>
-								<p style="color:black">This event consists of 3 rounds which will check participant’s wit, creativity  and convincing abilities.</p>
+                                <p style="color:black">This event consists of 3 rounds which will check participant’s wit, creativity and convincing abilities.</p>
+                                <p class="subtitle" style="color:black"><b>20 ₹</b></p>
                             </article>
                             <article class="tile is-child notification is-warning">
-                                <a href="accentus.html" style="color:black"><p class="text-black h2 mb-0">Accentus</p></a>
+                                <a href="events/accentus.html" style="color:black">
+                                    <p class="text-black h2 mb-0">Accentus</p>
+                                </a>
                                 <p class="subtitle" style="color:black"><b>“Why so serious?”</b></p>
-								<p style="color:black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p></a>
+                                <p style="color:black">This event consists of 3 rounds in which the participants will be judged on the basis of promptness, concentration & reflexes.</p>
+                                <p class="subtitle" style="color:black"><b>20 ₹</b></p>
                             </article>
                         </div>
                         <div class="tile is-parent">
                             <article class="tile is-child notification is-info">
-                                <a href="msmr.html" style="color:black"><p class="text-black h2 mb-0">Ms/Mr KnowHow</p></a>
+                                <a href="events/msmr.html" style="color:black">
+                                    <p class="text-black h2 mb-0">Ms/Mr KnowHow</p>
+                                </a>
                                 <p class="subtitle" style="color:black"><b>“Win the occasion”</b></p>
                                 <figure class="image is-4by3">
                                     <img src="images/Story/w%20(1).jpg">
@@ -127,28 +135,37 @@
                     </div>
                     <div class="tile is-parent">
                         <article class="tile is-child notification is-danger">
-                            <a href="cribado.html" style="color:black"><p class="text-black h2 mb-0">Cribado</p></a>
+                            <a href="events/cribado.html" style="color:black">
+                                <p class="text-black h2 mb-0">Cribado</p>
+                            </a>
                             <p class="subtitle" style="color:black"><b>“Welcome to the Corporate World”</b></p>
                             <div class="content">
                                 <p style="color:black">This event will help participants to crack the campus placement procedure.</p>
                             </div>
+                            <p class="subtitle" style="color:black"><b>30 ₹</b></p>
                         </article>
                     </div>
                 </div>
                 <div class="tile">
-                        <div class="tile is-parent is-vertical">
-                            <article class="tile is-child notification is-primary">
-                                <a href="vyakti.html" style="color:black"><p class="text-black h2 mb-0">Vyaktitvam</p></a>
-                                <p class="subtitle" style="color:black"><b>“Everything you need to know is within”</b></p>
-								<p style="color:black">Participant’s personality will be judged on the basis of psychological questions. The ability of participants to move an abstract idea to a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
-                            </article>
-                            <article class="tile is-child notification is-warning">
-                                <a href="ahlarry.html" style="color:black"><p class="text-black h2 mb-0">Ahl ar-Ra’y</p></a>
-                                <p class="subtitle" style="color:black"><b>“People of Opinion”</b></p>
-								<p style="color:black">Participants will be judged on the basis of knowledge of the current affairs, world as well as regional politics. The ability of participants to represent themselves as a delegate and make responsible decisions in diplomatic situations.</p>
-                            </article>
-                        </div>
+                    <div class="tile is-parent is-vertical">
+                        <article class="tile is-child notification is-primary">
+                            <a href="events/vyakti.html" style="color:black">
+                                <p class="text-black h2 mb-0">Vyaktitvam</p>
+                            </a>
+                            <p class="subtitle" style="color:black"><b>“Everything you need to know is within”</b></p>
+                            <p style="color:black">Participant’s personality will be judged on the basis of psychological questions. The ability of participants to move an abstract idea to a particular direction will be analysed which will be helpful to identify their corporate suitability.</p>
+                            <p class="subtitle" style="color:black"><b>30 ₹</b></p>
+                        </article>
+                        <article class="tile is-child notification is-warning">
+                            <a href="events/ahlarry.html" style="color:black">
+                                <p class="text-black h2 mb-0">Ahl ar-Ra’y</p>
+                            </a>
+                            <p class="subtitle" style="color:black"><b>“People of Opinion”</b></p>
+                            <p style="color:black">Participants will be judged on the basis of knowledge of the current affairs, world as well as regional politics. The ability of participants to represent themselves as a delegate and make responsible decisions in diplomatic situations.</p>
+                            <p class="subtitle" style="color:black"><b>20 ₹</b></p>
+                        </article>
                     </div>
+                </div>
             </div>
         </div>
 
@@ -158,24 +175,24 @@
 
 
 
-       <div class="footer py-4">
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
-					 <a >
-						<span class="icon">
-							<i class="fa fa-github"></i>
-						</span>
-					</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                        <span class="icon">
+                            <i class="fa fa-github"></i>
+                        </span>
+                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
-                    </script> Developed by Assassin007 with <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a>
+                    </script>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
         </div>
+
 
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
