--- a/template.html
+++ b/template.html
@@ -57,27 +57,27 @@
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="has-children">
                                     <a href="events.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="ahlarry.html">Alh ar'ray</a></li>
-                                        <li><a href="vyakti.html">Vyaktitvam</a></li>
-                                        <li><a href="accentus.html">Accentus</a></li>
-                                        <li><a href="segacite.html">Segacite</a></li>
-                                        <li><a href="cribado.html">Cribado</a></li>
-										<li><a href="msmr.html">Ms/Mr KnowHow</a></li>
+                                        <li><a href="events/ahlarry.html">Ahl ar'ray</a></li>
+                                        <li><a href="events/vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="events/accentus.html">Accentus</a></li>
+                                        <li><a href="events/segacite.html">Segacite</a></li>
+                                        <li><a href="events/cribado.html">Cribado</a></li>
+                                        <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Results.html">Results</a></li>
+                                <li><a href="results.html">Results</a></li>
                                 <li><a href="about.html">About US</a></li>
                                 <li><a href="story.html">Stories</a></li>
                                 <li class="has-children">
                                     <a href="to.html">Contact</a>
                                     <ul class="dropdown">
-                                        <li><a href="evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="dev.html">Developers</a></li>
-                                        <li><a href="contact.html">Send Query</a></li>
+                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
+                                        <li><a href="contact/dev.html">Developers</a></li>
+                                        <li><a href="contact/contact.html">Send Query</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -99,10 +99,7 @@
                 </div>
             </div>
         </header>
-
-
-
-        <section class="hero is-fullheight is-primary" style="color:fuchsia">
+ <section class="hero is-fullheight is-primary" style="color:fuchsia">
             <div class="hero-head" style="color:fuchsia">
                 <div class="container" style="color:fuchsia">
                     <div class="tabs is-centered" style="color:fuchsia">
@@ -283,25 +280,24 @@
 
 
 
-        <a class="nav-item">
-            <span class="icon">
-                <i class="fa fa-github"></i>
-            </span>
-        </a>
-
-       <div class="footer py-4">
+        <div class="footer py-4">
             <div class="container-fluid text-center">
                 <p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+                    With <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a> -Developed by RajeshPandey057 <a href="https://github.com/RajeshPandey057">
+                        <span class="icon">
+                            <i class="fa fa-github"></i>
+                        </span>
+                    </a> Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                     <script>
                         document.write(new Date().getFullYear());
 
-                    </script> Developed by Assassin007 with <i class="icon-heart-o" area-hidden="true"></i> from <a href="https://colorlib.com" target="_blank">Colorlib Libraries</a>
+                    </script>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
         </div>
+
 
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
