--- a/contact/contact.html
+++ b/contact/contact.html
@@ -148,16 +148,17 @@
                             </div>
                             <div class="col-lg-3 ml-auto">
                                 <div class="mb-3 bg-white">
+								<p class="mb-0 font-weight-bold">To</p>
+                                    <p class="mb-4"><a href="http://www.bvmengineering.ac.in/comman_page1.aspx?page_id=4">Training & Placement Cell - BVM</a></p>
+									<p class="mb-0 font-weight-bold">Email Address</p>
+                                    <p class="mb-0"><a href="https://gmail.com">tpcknowhow19@gmail.com</a></p><br/>
                                     <p class="mb-0 font-weight-bold">Address</p>
-                                    <p class="mb-0">Training & Placement Cell - BVM</p>
+                                    <p class="mb-0"></p>
                                     <p class="mb-4"> 4th Floor,B-Block,
                                         Birla Vishvakarma Mahavidyalaya,
                                         Vallabh Vidyanagar,Anand,
                                         Gujarat 388120, India</p>
-                                    <p class="mb-0 font-weight-bold">Phone</p>
-                                    <p class="mb-4"><a href="#">+9714094823</a></p>
-                                    <p class="mb-0 font-weight-bold">Email Address</p>
-                                    <p class="mb-0"><a href="gmail.com">bvmtpc2020@gmail.com</a></p>
+                                    
                                     <div class="mapouter">
                                         <section id="contact" class="map">
                                             <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=4th%20Floor%2CB-Block%2CBirla%20Vishvakarma%20Mahavidyalaya%2C%20Mota%20Bazaar%2C%20Vallabh%20Vidyanagar%2C%20Anand%2C%20Gujarat%20388120&t=&z=17&ie=UTF8&iwloc=&output=embed"></iframe>
