--- a/contact/dev.html
+++ b/contact/dev.html
@@ -3,21 +3,21 @@
 
 <head>
     <title>KnowHow'19 &mdash;Try Now To know how.</title>
-    <link rel="icon" type="image/ico" href="images/logo.png" />
+    <link rel="icon" type="image/ico" href="../images/logo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/lightgallery.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/swiper.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../fonts/icomoon/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/jquery-ui.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../css/lightgallery.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="../css/swiper.css">
+    <link rel="stylesheet" href="../css/aos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -48,36 +48,36 @@
             </div>
             <div class="site-mobile-menu-body"></div>
         </div>
-        <header class="site-navbar py-3" role="banner">
+                <header class="site-navbar py-3" role="banner">
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-2" data-aos="fade-down">
-                        <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
+                        <h1 class="mb-0"><a href="../admin/login.html" class="text-black h2 mb-0">KnowHow'19</a></h1>
                     </div>
                     <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
                         <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="../index.html">Home</a></li>
                                 <li class="has-children">
-                                    <a href="events.html">Events</a>
+                                    <a href="../events.html">Events</a>
                                     <ul class="dropdown">
-                                        <li><a href="events/ahlarry.html">Ahl ar'ray</a></li>
-                                        <li><a href="events/vyakti.html">Vyaktitvam</a></li>
-                                        <li><a href="events/accentus.html">Accentus</a></li>
-                                        <li><a href="events/segacite.html">Segacite</a></li>
-                                        <li><a href="events/cribado.html">Cribado</a></li>
-                                        <li><a href="events/msmr.html">Ms/Mr KnowHow</a></li>
+                                        <li><a href="ahlarry.html">Ahl ar'ray</a></li>
+                                        <li><a href="vyakti.html">Vyaktitvam</a></li>
+                                        <li><a href="accentus.html">Accentus</a></li>
+                                        <li><a href="segacite.html">Segacite</a></li>
+                                        <li><a href="cribado.html">Cribado</a></li>
+                                        <li><a href="msmr.html">Ms/Mr KnowHow</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="results.html">Results</a></li>
-                                <li><a href="about.html">About US</a></li>
-                                <li><a href="story.html">Stories</a></li>
+                                <li><a href="../results.html">Results</a></li>
+                                <li><a href="../about.html">About US</a></li>
+                                <li><a href="../story.html">Stories</a></li>
                                 <li class="has-children">
-                                    <a href="to.html">Contact</a>
+                                    <a href="../to.html">Contact</a>
                                     <ul class="dropdown">
-                                        <li><a href="contact/evco.html">Event Co-ordinators</a></li>
-                                        <li><a href="contact/dev.html">Developers</a></li>
-                                        <li><a href="contact/contact.html">Send Query</a></li>
+                                        <li><a href="../contact/evco.html">Event Co-ordinators</a></li>
+                                        <li><a href="../contact/dev.html">Developers</a></li>
+                                        <li><a href="../contact/contact.html">Send Query</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -300,22 +300,22 @@
 
 
     </div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/picturefill.min.js"></script>
-    <script src="js/lightgallery-all.min.js"></script>
-    <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../js/jquery-ui.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/jquery.stellar.min.js"></script>
+    <script src="../js/jquery.countdown.min.js"></script>
+    <script src="../js/jquery.magnific-popup.min.js"></script>
+    <script src="../js/bootstrap-datepicker.min.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/aos.js"></script>
+    <script src="../js/picturefill.min.js"></script>
+    <script src="../js/lightgallery-all.min.js"></script>
+    <script src="../js/jquery.mousewheel.min.js"></script>
+    <script src="../js/main.js"></script>
     <script>
         $(document).ready(function() {
             $('#lightgallery').lightGallery();
