--- a/story.html
+++ b/story.html
@@ -99,180 +99,7 @@
                 </div>
             </div>
         </header>
- <section class="hero is-fullheight is-primary" style="color:fuchsia">
-            <div class="hero-head" style="color:fuchsia">
-                <div class="container" style="color:fuchsia">
-                    <div class="tabs is-centered" style="color:fuchsia">
-                        <ul style="color:fuchsia">
-                            <li><a>This is always at the top</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="hero-body">
-                <div class="container has-text-centered">
-                    <h3 class="title is-2">
-                        <a href="https://bulma.io/documentation/layout/hero/">
-                            <span class="icon is-medium">
-                                <i class="fa fa-arrows-v"></i>
-                            </span> Easy <strong>vertical centering</strong> in <strong>fullscreen</strong>
-                        </a>
-                    </h3>
-                    <h4 class="subtitle is-4">Include any content you want, it's always centered</h4>
-                </div>
-            </div>
-
-            <div class="hero-foot">
-                <div class="container">
-                    <div class="tabs is-centered">
-                        <ul>
-                            <li><a>And this at the bottom</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- GRID SYSTEM -->
-        <div class="block">
-            <div class="columns">
-                <div class="column">
-                    <p class="notification">First Column</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Second Column</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Third Column</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Fourth Column</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-2">
-                    <p class="notification">2 column</p>
-                </div>
-                <div class="column is-8">
-                    <p class="notification">8 Column</p>
-                </div>
-                <div class="column is-2">
-                    <p class="notification">2 Column</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-three-quarters">
-                    <p class="notification">is-three-quarters</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-two-thirds">
-                    <p class="notification">is-two-thirds</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="columns">
-                <div class="column is-half">
-                    <p class="notification">is-half</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-                <div class="column">
-                    <p class="notification">Auto</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="block">
-            <div class="tile is-ancestor">
-                <div class="tile is-vertical is-8">
-                    <div class="tile">
-                        <div class="tile is-parent is-vertical">
-                            <article class="tile is-child notification is-primary">
-                                <p class="title">Vertical...</p>
-                                <p class="subtitle">Top tile</p>
-                            </article>
-                            <article class="tile is-child notification is-warning">
-                                <p class="title">...tiles</p>
-                                <p class="subtitle">Bottom tile</p>
-                            </article>
-                        </div>
-                        <div class="tile is-parent">
-                            <article class="tile is-child notification is-info">
-                                <p class="title">Middle tile</p>
-                                <p class="subtitle">With an image</p>
-                                <figure class="image is-4by3">
-                                    <img src="https://bulma.io/images/placeholders/640x480.png">
-                                </figure>
-                            </article>
-                        </div>
-                    </div>
-                    <div class="tile is-parent">
-                        <article class="tile is-child notification is-danger">
-                            <p class="title">Wide tile</p>
-                            <p class="subtitle">Aligned with the right tile</p>
-                            <div class="content">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="tile is-parent">
-                    <article class="tile is-child notification is-success">
-                        <p class="title">Tall tile</p>
-                        <p class="subtitle">With even more content</p>
-                        <div class="content">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam semper diam at erat pulvinar, at pulvinar felis blandit. Vestibulum volutpat tellus diam, consequat gravida libero rhoncus ut. Morbi maximus, leo sit amet vehicula eleifend, nunc dui porta orci, quis semper odio felis ut quam.</p>
-                            <p>Suspendisse varius ligula in molestie lacinia. Maecenas varius eget ligula a sagittis. Pellentesque interdum, nisl nec interdum maximus, augue diam porttitor lorem, et sollicitudin felis neque sit amet erat. Maecenas imperdiet felis nisi, fringilla luctus felis hendrerit sit amet. Aenean vitae gravida diam, finibus dignissim turpis. Sed eget varius ligula, at volutpat tortor.</p>
-                            <p>Integer sollicitudin, tortor a mattis commodo, velit urna rhoncus erat, vitae congue lectus dolor consequat libero. Donec leo ligula, maximus et pellentesque sed, gravida a metus. Cras ullamcorper a nunc ac porta. Aliquam ut aliquet lacus, quis faucibus libero. Quisque non semper leo.</p>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </div>
-
-        <!-- PAGINATION -->
-        <div class="block">
-            <nav class="pagination">
-                <a href="" class="pagination-previous" disabled>Previous</a>
-                <a href="" class="pagination-next">Next page</a>
-                <ul class="pagination-list">
-                    <li>
-                        <a href="" class="pagination-link is-current">1</a>
-                    </li>
-                    <li>
-                        <a href="" class="pagination-link">2</a>
-                    </li>
-                    <li>
-                        <a href="" class="pagination-link">3</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+ <div id="pixlee_container"></div><script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'x6M7tCv_PccxadsC3Z7A'});Pixlee.addSimpleWidget({widgetId:'13302'});};</script><script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 
 
 
